# new-life

./: .gitignore  README.md  actor_weights.pt  cSpell.json  cspell.yml  debug.py  environment.yml  pyproject.toml
assets/: ant.xml
assets/mujoco/models/: ant-4.xml
libs/bert_sac/: custom_hope.py  models.py  sac_pl.py  sac_trainer.py  suc_lib.py  utils.py
libs/bert_sac/cleanrl/: __init__.py  sac_continuous_action.py
libs/bert_sac/gymnasium_envs/: __init__.py  mujoco_ant_legs.py
libs/bert_sac/gymnasium_envs/ants/: __init__.py  mujoco_ant_legs.py
libs/gym_ants/: __init__.py  ants.py
libs/gym_ants/assets/: ant-3.xml  ant-5.xml  ant-6.xml
libs/my_SAC/: ac.py  berts.py  pytorch_sheet.ipynb  try_.py
libs/my_sac_old/: ac.py
libs/yout/: buffer.py  main_sac.py  sac_torch.py
notebooks/: ant.ipynb  bert_add.ipynb  classify.ipynb  dim_env_test.ipynb  many_legs.ipynb  pics.ipynb  smth.ipynb  torchgraphviz.ipynb  train.ipynb  try.ipynb  workbench.ipynb
notebooks/cheatsheets/: jaxtyping.ipynb  pytorch_cheatsheet.ipynb
notebooks/drafts/: ant.ipynb  bert_add.ipynb  dim_env_test.ipynb  skrl_sac.ipynb
notebooks/mine/: berting.ipynb  pendulum_sac.ipynb
notebooks/torchrl/: envs.ipynb  rbs.ipynb
scripts/: last_hope.py  sac_continuous_action.py  sac_ex.py  sac_ex2.py  suc_lib.py  torch_gymnasium_pendulum_sac.py
weights/: actor_4legs_2024.04.28_14-32.pt  qf1_4legs_2024.04.28_14-32.pt  qf1_target_4legs_2024.04.28_14-32.pt  qf2_4legs_2024.04.28_14-32.pt  qf2_target_4legs_2024.04.28_14-32.pt
